# supernova

./: .gitignore  README.md  __init__.py  filters.py  interp.py  pyproject.toml  requirements.txt  supernova.py
.github/workflows/: ci_tests.yml
SN2020lao/: bolo_lum.py  comparison_figure.py  fit_arnett.py  ingest_data.py  plot_absmag.py  plot_bolo_lum.py
SN2020lao/SNClass_SN1998bw/: SN1998bw_phot.csv  SN1998bw_sites.csv  SN1998bw_sninfo.csv
SN2020lao/SNClass_SN2006aj/: SN2006aj_phot.csv
SN2020lao/SNClass_SN2020lao/: SN2020lao_bands.csv  SN2020lao_limits.csv  SN2020lao_phases.csv  SN2020lao_sites.csv
SN2020lao/comparison_data/: icbl_comp.json
SN2020lao/comparison_data/06aj/: B_06aj.ecsv  R_06aj.ecsv  V_06aj.ecsv
SN2020lao/comparison_data/98bw/: 98bw.csv
SN2020lao/inputs/: SN2020lao_g_detections.csv  SN2020lao_g_limits.csv  SN2020lao_i_detections.csv  SN2020lao_i_limits.csv  SN2020lao_r_limits.csv  flows_2020lao_15a534d5cffdfe7ed4cb79f6ea0c5bb8_lc.ecsv  flows_2020lao_clean_lc.ecsv  spectra_df.json
SN2020lao/interp/SNClass_SN2020lao/: SN2020lao_limits.csv  SN2020lao_phot.csv  SN2020lao_sites.csv  SN2020lao_sninfo.csv
SN2020lao/lum/SNClass_SN2020lao/: SN2020lao_bands.csv  SN2020lao_limits.csv  SN2020lao_phases.csv  SN2020lao_phot.csv  SN2020lao_sites.csv  arnett.json  arnett_full.json  arnett_peak.json
SNClass_20lao/: 20lao_filters.csv  20lao_phases.csv  20lao_phot.csv  20lao_sites.csv  20lao_sninfo.csv  SN2020lao_r_detections.csv
SNClass_SN1998bw/: SN1998bw_bands.csv  SN1998bw_phases.csv  SN1998bw_phot.csv  SN1998bw_sites.csv
SNClass_SN2006aj/: SN2006aj_bands.csv  SN2006aj_phases.csv  SN2006aj_sites.csv  SN2006aj_sninfo.csv
SNClass_SN2020lao/: SN2020lao_bands.csv  SN2020lao_phases.csv  SN2020lao_phot.csv
astrosn/: filters.py  interp.py  photometry.py  sites.py  sn_data.py  supernova.py  utils.py  version.py
astrosn/bolo/: arnett.py  bb_fit_bootstrap_multithreaded.py  bololc.py
astrosn/ingest/: collators.py  converters.py  flows.py  ingest.py  readers.py  utils.py  ztf.py
astrosn/plotting/: __init__.py  colors.py  defaults.py  matplotlib_classes.py  parameters.py  plot_lc.py  plotter.py  premade_plots.py  settings.py
supernova/: __init__.py  filters.py  interp.py  photometry.py  sites.py  sn_data.py  supernova.py  utils.py
supernova/bolo/: __init__.py  arnett.py  bb_fit_bootstrap_multithreaded.py  bololc.py
supernova/data_collectors/: collators.py  converters.py  data_collators.py  flows.py  ingest.py  readers.py  utils.py  ztf.py
supernova/ingest/: __init__.py  collators.py  converters.py  flows.py  ingest.py  readers.py  utils.py  ztf.py
supernova/plotting/: __init__.py  colors.py  plot_lc.py  premade_plots.py
supernova/sndata/SNClass_20lao/: 20lao_phases.csv  20lao_sninfo.csv
tests/: test_ingest.py  test_photometry.py  test_premade_plots.py  test_sn_serialization.py
