[build-system]
requires = ["flit_core >=3.5,<4", "setuptools >=42", "wheel"]
build-backend = "flit_core.buildapi"

[project]
name= 'astrosn'
authors = [{name = "Emir Karamehmetoglu", email = "emirkmo@github.com"}]
dynamic = ["version", "description"]
classifiers=["Programming Language :: Python :: 3",
                 "License :: OSI Approved :: MIT License",
                 "Operating System :: OS Independent",
                 "Topic :: Scientific/Engineering :: Astronomy"]
requires-python = '>=3.10'
readme = "README.md"
license = {file = "LICENSE.md"}
dependencies = [
    "astropy>=5.0",
    "numpy>=1.21",
    "pandas",
    "svo_filters",
    "matplotlib",
    "seaborn",
    "astroquery",
    "corner",
    "dust_extinction",
    "lmfit",
    "mpmath",
    "specutils",
    "tqdm",
    "typing_extensions",
    "numdifftools",
    "emcee",
    "piscola",
    "svo_filters",
    "requests",
]

[project.urls]
Home = "https://github.com/emirkmo/supernova"

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
flows = [
    "tendrils"
]

[tool.black]
line-length = 120
target-version = ['py310']
preview = true
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.idea
  | \.mypy_cache
  | \.pytest_cache
  | buck-out
  | build
  | dist
  | SN2020lao
  | README.md
  | LICENSE
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
known_first_party = "astrosn"
known_third_party = "astropy,corner,dust_extinction,emcee,lmfit,matplotlib,numpy,pandas,pytest,requests,seaborn,specutils,tqdm"
known_standard_library = "contextlib,functools,inspect,os,sys,time,typing"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
addopts = "--cov=astrosn --cov-report=term-missing --cov-report=html --cov-report=annotate"
python_files = "test_*.py"
testpaths = "tests"

[tool.mypy]
python_version = 3.10
warn_unused_configs = True
show_error_codes = True
pretty = True
files = "astrosn"

[[tool.mypy.overrides]]
module = [
    'astroquery.logger',
    'astropy.*',
    'mpl_toolkits.*',
    'erfa.*',
    'matplotlib.colors.*',
    'matplotlib.ticker.*',
    'matplotlib.transforms.*',
    'matplotlib._mathtext.*',
    'matplotlib.layout_engine.*',
    'matplotlib.text.*',
    'matplotlib.textpath.*',
    'matplotlib.image.*',
    'matplotlib.patches.*',
    'matplotlib.offsetbox.*',
    'matplotlib.legend.*',
]
ignore_missing_imports = true
ignore_errors = true
allow_untyped_globals = true
implicit_reexport = true